# lettreplacer

./: README.md  io.github.dida_code.lettreplacer.json  meson.build
data/: io.github.dida_code.lettreplacer.appdata.xml.in  io.github.dida_code.lettreplacer.desktop.in  io.github.dida_code.lettreplacer.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: lettreplacer.gresource.xml  lettreplacer.in  main.py  meson.build  window.py  window.ui  window.ui~
